add quote card frontend files

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Quote Card Express</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Quote Card</title>
   </head>
   <body>
-    <h1>The Quote Card Express!</h1>
+    <main class="main">
+      <div class="background-img"></div>
+      <article class="quote-container">
+        <q id="quote" class="quote-text">
+          Any sufficiently advanced technology is indistinguishable from magic.
+        </q>
+        <p id="author" class="author-text">Arthur C. Clarke</p>
+      </article>
+    </main>
+    <script src="./js/index.js"></script>
   </body>
 </html>
