add Unsplash fetch (key removed)

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="data:," />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -10,10 +11,8 @@
     <main class="main">
       <div class="background-img"></div>
       <article class="quote-container">
-        <q id="quote" class="quote-text">
-          Any sufficiently advanced technology is indistinguishable from magic.
-        </q>
-        <p id="author" class="author-text">Arthur C. Clarke</p>
+        <q id="quote" class="quote-text">...</q>
+        <p id="author" class="author-text">...</p>
       </article>
     </main>
     <script src="./js/index.js"></script>
